# zfshealth

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  flake.nix  renovate.json
.github/workflows/: ci.yml  release-artifacts.yml  release-pr-dry-run.yml  release.yml
examples/: config.toml
nix/: module.nix  package.nix
packaging/: config.toml
packaging/debian/: postinst  zfshealth.service
src/: config.rs  daemon.rs  email.rs  error.rs  main.rs  scrub.rs  status.rs
systemd/: zfshealth-scrub.service
