[package]
name = "zfshealth"
version = "0.1.1"
edition = "2024"
description = "Tool to manage ZFS pool scrubs"
license = "MIT OR Apache-2.0"
authors = [
  "Josh <git@bnhtech.com",
]

[dependencies]
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.24", default-features = false, features = ["toml"] }
etcetera = "0.11.0"
jiff = "0.2.29"
lettre = { version = "0.11.22", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls", "rustls-native-certs", "aws-lc-rs"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tokio-cron-scheduler = "0.15.1"
toml = "1.1.2"
uuid = "1.23.4"

[package.metadata.deb]
assets = [
    ["target/release/zfshealth", "/usr/bin/zfshealth", "755"],
    ["packaging/config.toml", "/usr/share/doc/zfshealth/examples/config.toml", "644"],
]
maintainer-scripts = "packaging/debian"

[package.metadata.deb.systemd-units]
unit-name = "zfshealth"
enable = true
start = true
